# CalNav-Browser

./: .gitignore  build.py  calnav.py  calnav_bookmarks.py  calnav_passwords.py  calnav_profiles.py  calnav_session.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
